# infinite-keyboard

./: .gitignore  OUTLINE.md  README.md  ROUTING_NOTES.md  SCHEMATIC_EVALUATOR.md
infinite_keyboard/: #auto_saved_files#  _autosave-infinite_keyboard.kicad_sch  fp-info-cache  freerouting.dsn  infinite_keyboard.cir  infinite_keyboard.kicad_pcb  infinite_keyboard.kicad_prl  infinite_keyboard.kicad_pro  infinite_keyboard.kicad_sch  sym-lib-table
infinite_keyboard/libraries/: AP2112K-3.3TRG1.lib  AP2112K-3.3TRG1.mod  ESP32-S3-WROOM-1-N8.lib  ESP32-S3-WROOM-1-N8.mod  MIC5504-3.3YM5-TR.dcm  MIC5504-3.3YM5-TR.lib  MIC5504-3.3YM5-TR.mod  MIC5504-3_3YM5-TR.kicad_sym  MSD-1-A.dcm  MSD-1-A.kicad_sym  MSD-1-A.lib  MSD-1-A.mod  MSD1A.kicad_mod  PCM5100APWR.dcm  PCM5100APWR.kicad_sym  PCM5100APWR.lib  PCM5100APWR.mod  SJ-43617-SMT-TR.dcm  SJ-43617-SMT-TR.kicad_sym  SJ-43617-SMT-TR.lib  SJ-43617-SMT-TR.mod  SJ43617SMTTR.kicad_mod  SOP65P640X120-20N.kicad_mod  SOT95P280X145-5N.kicad_mod  TPA6130A2RTJR.dcm  TPA6130A2RTJR.mod  TS04-66-75-BK-160-SMT.dcm  TS04-66-75-BK-160-SMT.kicad_sym  TS04-66-75-BK-160-SMT.lib  TS04-66-75-BK-160-SMT.mod  TS046675BK160SMT.kicad_mod  UJ20-C-H-G-SMT-5-P16-TR.mod
infinite_keyboard_copy_20250529140216/: infinite_keyboard_copy_20250529140216.ino
software/player/infinite_keyboard_copy_20250529140216/: infinite_keyboard_copy_20250529140216.ino
software/rust/infinite_keyboard_rust/: Cargo.toml
software/sd_card_test_project/sd_card_test/: sd_card_test.ino
