[package]
edition = "2021"
name    = "infinite_keyboard_rust"
version = "0.1.0"

[[bin]]
name = "infinite_keyboard_rust"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.15.1", features = ["esp32s3", "println"] }
esp-println = { version = "0.13.1", features = ["esp32s3"] }
embedded-hal = "1.0.0"
fugit = "0.3.7"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
